# feature-3dgs

./: .gitignore  .gitmodules  CLAUDE.md  INSTALL.md  NERFSTUDIO_PATCH.md  README.md  README_CN.md  pyproject.toml  requirements.txt
encoders/lseg_encoder/: encode_images.py  test_optimization.py
encoders/lseg_encoder/additional_utils/: OPTIMIZATION_README.md  __init__.py  async_io.py  batch_processor.py  data_preloader.py  encoding_models.py
encoders/lseg_encoder/data/: __init__.py
encoders/lseg_encoder/modules/: lseg_module.py  lsegmentation_module.py
encoders/sam_encoder/segment_anything.egg-info/: PKG-INFO
extensions/nerfstudio/: __init__.py
extensions/nerfstudio/configs/: __init__.py  feature_3dgs_configs.py
extensions/nerfstudio/models/: __init__.py  feature_3dgs.py
feature_3dgs/: __init__.py  feature_3dgs.py  feature_3dgs_configs.py
feature_3dgs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
feature_3dgs/dataparsers/: __init__.py  feature_3dgs_dataparser.py  semantic_feature_dataparser.py
feature_3dgs/datasets/: __init__.py  semantic_feature_dataset.py
feature_3dgs_extension/: __init__.py
feature_3dgs_extension/configs/: __init__.py  feature_3dgs_configs.py
feature_3dgs_extension/data/: __init__.py
feature_3dgs_extension/data/dataparsers/: __init__.py  semantic_feature_dataparser.py
feature_3dgs_extension/models/: __init__.py
nerfstudio_integration/: FILES_CREATED.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  setup.py  train_feature_3dgs.py
scene/: dataset_readers.py
scripts/: editing_demo.py  extract_lseg_features.py  precompute_semantic_features.py  register_feature_3dgs.py  test_integration.py
submodules/simple-knn/: simple_knn.cu
(+3 files in other folders)
